test/should-fail/parse-error.while
(begin
  (if true skip (x := x)))
